Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
         <h2>Habilidades</h2>
             <li>Windows Server</li>
             <li>GNU/Linux</li>
-            <li>DNS</li>
             <li>TCP/IP</li>
             <li>SQL</li>
             <li>HTML</li>
@@ -85,8 +84,8 @@
 
     <section id="contacto">
         <h2>Contacto</h2>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/tu-usuario/">Antonio Lorenzo Vázquez <i class="fab fa-linkedin"></i></a></p>
-        <p>Correo electrónico: </p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/antoniolv88">Antonio Lorenzo Vázquez <i class="fab fa-linkedin"></i></a></p>
+        <p>Correo electrónico: antoniolorenzovazquez88@gmail.com</p>
         
 
     </section>
